--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Backport:
+	* Backport:Use non-blocking recvmsg() for data/ctrl connections of lttng-relayd
 	* Port dynamic buffer to stable 2.9
 
 2018-04-30 lttng-tools 2.9.9 (CERN announces WWW protocols will be free)
