--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Backport:
+	* Inform the data connection of its corresponding session
 	* Fix: partial writes of padding are not checked
 	* Fix: relayd protocol field present from minor 8 is not checked
 	* Fix: relay_recv_metadata does not check for partial write
