Propagate whether a connection was closed cleanly or after an error
This allows a follow-up fix that requires this distinction to
decide whether a session must be closed or aborted.

Signed-off-by: Jérémie Galarneau <jeremie.galarneau@efficios.com>
Signed-off-by: Jonathan Rajotte <jonathan.rajotte-julien@efficios.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Backport:
+	* Fix: relayd protocol field present from minor 8 is not checked
 	* Fix: relay_recv_metadata does not check for partial write
 	* Backport:Use non-blocking recvmsg() for data/ctrl connections of lttng-relayd
 	* Port dynamic buffer to stable 2.9
