--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Backport:
+
 2018-04-30 lttng-tools 2.9.9 (CERN announces WWW protocols will be free)
 	* Add DBG statement for TCP keep-alive options
 	* Fix: failure to launch agent thread is not reported
